@@ -1,3 +1,6 @@
+Scott Lawrence - Thu Apr 21 2005
+	1/2gs now set time based on the last time settings were saved
+
 Courtney Cavin - Tue Apr 19 2005
 	refactored dsp management into oss.[ch]
 
